# matrixlab

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dockerhub.yml  ghcr.yml  matrix-maintainer-health.yml  release.yml  sync-hf-console.yml  sync-hf-space.yml
assets/screenshots/: README.md
configs/: agent_matrix_repos.json
docs/: AI_ENGINEER_SANDBOX_INTEGRATION.md  CHATBOT_SANDBOX_SNIPPET.md  GITPILOT_RUNTIME_STABILITY_REVIEW.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/console/: admin.jsx  api.js  app.jsx  chrome.jsx  dashboard.jsx  integrations.jsx  new-run.jsx  playground.jsx  profiles.jsx  runs.jsx  service.jsx  shared.jsx  styles.css  tweaks-panel.jsx
hf/: Dockerfile  README.md  requirements.txt
hf-console/: Dockerfile  README.md  nginx.conf
hf/app/: main.py  runner_client.py  sandbox.py
hf/app/templates/: home.html  result.html
matrixlab/: installer.py  mcp_inspector.py  mcp_server.py  runner_entry.py  sandbox_cli.py
matrixlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/: mcp_inspector.py  mcp_server.py  requirements.txt
orchestrator/: Dockerfile
orchestrator/app/: client.py  detect.py  main.py  pipelines.py
runner/: Dockerfile
runner/app/: chat_snippets.py  config.py  docker_executor.py  environments.py  main.py  models.py  native.py  pool_manager.py  sandbox.py
sandbox-build/: Dockerfile
sandbox-dotnet/: Dockerfile
sandbox-go/: Dockerfile
sandbox-java/: Dockerfile
sandbox-node/: Dockerfile
sandbox-python/: Dockerfile
sandbox-rust/: Dockerfile
sandbox-utils/: Dockerfile
scripts/: dev_mcp.sh  inspect_mcp.sh  native-contract-smoke.py  smoke-test.sh
tools/: bootstrap.py  inspector_ui.py  matrix_maintainer.py
